2006-04-24  Chris Lyttle  <chris@wilddev.net>

	* Updated the following (from Patrick Schweiger <pks@spiffykitty.com>):
	'guide/C/ch_bus_ar.xml'

	* Added the following new screenshots (from Patrick Schweiger
	<pks@spiffykitty.com>):
	'guide/C/figures/bus_ar_invoicenew.png'
	'guide/C/figures/bus_ar_invoiceprint.png'
	'guide/C/figures/bus_ar_invoicechange1.png'
	'guide/C/figures/bus_ar_invoicechange3.png'
	'guide/C/figures/bus_ar_invoiceedit.png'
	'guide/C/figures/bus_ar_payment.png'
	'guide/C/figures/bus_ar_custnew.png'
	'guide/C/figures/bus_ar_invoicepost.png'
	'guide/C/figures/bus_ar_invoicechange2.png'
	'guide/C/figures/bus_ar_custfind.png'
	'guide/C/figures/bus_ar_jobnew.png'
	
2006-04-23  Chris Lyttle  <chris@wilddev.net>

	* Removed the following: 
	'guide/C/figures/invest_peditor0.png'

2006-04-23  Chris Lyttle  <chris@wilddev.net>

	* Updated the following to validate xml 
	(from Bengt Thuree <bengt@thuree.com>):
        'guide/C/ch_accts.xml'
        'guide/C/ch_basics.xml'
        'guide/C/ch_cbook.xml'
        'guide/C/ch_cc.xml'
	'guide/C/ch_invest.xml'
        'guide/C/ch_oview.xml'
        'guide/C/ch_txns.xml'

2006-04-20  Chris Lyttle  <chris@wilddev.net>

        * Updated the following (from Bengt Thuree <bengt@thuree.com>):
        'guide/C/ch_accts.xml'
        'guide/C/ch_basics.xml'
        'guide/C/ch_cbook.xml'
        'guide/C/ch_cc.xml'
        'guide/C/ch_oview.xml'
        'guide/C/ch_txns.xml'

        * Added the following new screenshots (from Bengt Thuree
        <bengt@thuree.com>):
	'guide/C/figures/cbook_TransactionRptExpenses.png'
	'guide/C/figures/cc_CashFlow.png'
	'guide/C/figures/cc_TransactionRptExpenses.png'
	'guide/C/figures/cc_TransactionRptVisa.png'
	'guide/C/figures/cbook_TransactionRptAssets.png'
	'guide/C/figures/txns_CashFlow.png'
	'guide/C/figures/txns_TransactionRptExpenses.png'
	'guide/C/figures/cbook_CashFlow.png'
	'guide/C/figures/txns_TransactionRptChecking.png'
