@@ -25,9 +25,9 @@
     <title>Accounting Concepts</title>
 
     <para>GnuCash is easy enough to use that you do not have to have a
-    complete understanding of accounting principals to find it useful.
+    complete understanding of accounting principles to find it useful.
     However, you will find that some basic accounting knowledge will prove to
-    be invaluable as GnuCash was designed using these principals as a
+    be invaluable as GnuCash was designed using these principles as a
     template. It is highly recommended that you understand this section of the
     guide before proceeding.</para>
 
@@ -1814,7 +1814,7 @@
 
     <para>GnuCash creates several types of files to help ensure that your data
     is not lost. You may see files with the following file extensions: xac,
-    log, LCK, LNK in the same directory as your principal data file. What each
+    log, LCK, LNK in the same directory as your primary data file. What each
     of these files does is presented below.</para>
     
     <programlisting>
