@@ -18,7 +18,7 @@
   <sect1 id="basics_accounting1">
    <title>Grundlagen der Kontoführung</title>
 
-<para>GnuCash is easy enough to use that you do not have to have a complete understanding of accounting principals to find it useful.  However, you will find that some basic accounting knowledge will prove to be invaluable as GnuCash was designed using these principals as a template.  It is highly recommended that you understand this section of the guide before proceeding.</para>
+<para>GnuCash is easy enough to use that you do not have to have a complete understanding of accounting principles to find it useful.  However, you will find that some basic accounting knowledge will prove to be invaluable as GnuCash was designed using these principles as a template.  It is highly recommended that you understand this section of the guide before proceeding.</para>
 
   <sect2 id="basics_accounting52">
   <title>Die 5 grundlegenden Kontoarten</title>
@@ -850,7 +850,7 @@ The last step is the import.  Once you have verified your account names and inve
 
   <sect1 id="basics_backup1">
    <title>Sicherungskopien erstellen und zurückspielen</title>
-    <para>GnuCash creates several types of files to help ensure that your data is not lost. You may see files with the following file extensions:  xac, log, LCK, LNK in the same directory as your principal data file.  What each of these files does is presented below.</para>
+    <para>GnuCash creates several types of files to help ensure that your data is not lost. You may see files with the following file extensions:  xac, log, LCK, LNK in the same directory as your primary data file.  What each of these files does is presented below.</para>
 
   <sect2 id="basics_backupxac2">
    <title>Backup-Datei (.xac)</title>
