@@ -1,3 +1,9 @@
+2006-04-25  David Hampton  <hampton@employees.org>
+
+	* guide/C/ch_basics.xml:
+	* guide/de_DE/ch_basics.xml: Correct the word "principle" in a
+	couple of places. Fixes #144991.
+
 2006-04-24  Chris Lyttle  <chris@wilddev.net>
 
 	* Updated the following (from Patrick Schweiger <pks@spiffykitty.com>):
